k8s/sock-shop/templates/service/sock-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - "*.sarahaligbe.me"
    secretName: wildcard-cert
  rules:
    - host: "sock.sarahaligbe.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end 
                port:
                  number: 8079
